y.output
Terminals unused in grammar

   FOR
   CONST
   RETURN
   OP_EXP
   LBRA
   RBRA


Grammar

    0 $accept: program $end

    1 program: classes main

    2 classes: classes class
    3        | /* empty */

    4 main: MAIN LPAR RPAR LCUR instr_set RCUR

    5 class: CLASS IDENTIFIER LCUR class_content RCUR

    6 class_content: class_instance_properties class_constructors class_instance_methods

    7 class_instance_properties: class_instance_properties class_instance_property
    8                          | /* empty */

    9 class_instance_property: var_declaration SEMC

   10 var_declaration: type IDENTIFIER
   11                | type var_assignment

   12 var_assignment: IDENTIFIER OP_ASSIGN expr

   13 class_constructors: class_constructors class_constructor
   14                   | /* empty */

   15 class_constructor: IDENTIFIER LPAR parameters_def RPAR LCUR instr_set RCUR

   16 class_instance_methods: class_instance_methods class_instance_method
   17                       | /* empty */

   18 class_instance_method: METHOD type IDENTIFIER LPAR parameters_def RPAR LCUR instr_set RCUR

   19 instr_set: instr_set instr
   20          | /* empty */

   21 instr: SEMC
   22      | instr_simple SEMC
   23      | instr_conditional
   24      | instr_loop

   25 instr_simple: instr_declaration
   26             | expr

   27 instr_conditional: block_if

   28 instr_loop: block_while

   29 instr_declaration: type IDENTIFIER
   30                  | type IDENTIFIER OP_ASSIGN expr

   31 block_if: IF LPAR expr_boolean RPAR LCUR instr_set RCUR block_else

   32 block_else: ELSE LCUR instr_set RCUR
   33           | ELSE block_if
   34           | /* empty */

   35 block_while: WHILE LPAR expr_boolean RPAR LCUR instr_set RCUR
   36            | WHILE LPAR expr_boolean RPAR instr

   37 expr: expr_assignment

   38 expr_assignment: expr_conditional
   39                | expr_conditional OP_ASSIGN expr_assignment
   40                | expr_conditional OP_PLUS_SH expr_assignment
   41                | expr_conditional OP_MINUS_SH expr_assignment
   42                | expr_conditional OP_MULT_SH expr_assignment
   43                | expr_conditional OP_DIV_SH expr_assignment
   44                | expr_conditional OP_MOD_SH expr_assignment

   45 expr_conditional: expr_boolean
   46                 | expr_boolean COND_QUES expr_conditional COND_COLN expr_conditional

   47 expr_boolean: expr_implies

   48 expr_implies: expr_or
   49             | expr_implies OP_IMPLIES expr_or

   50 expr_or: expr_and
   51        | expr_or OP_OR expr_and

   52 expr_and: expr_equality
   53         | expr_and OP_AND expr_equality

   54 expr_equality: expr_order
   55              | expr_equality OP_EQ expr_order
   56              | expr_equality OP_NE expr_order

   57 expr_order: expr_additive
   58           | expr_order OP_GE expr_additive
   59           | expr_order OP_LE expr_additive
   60           | expr_order OP_GT expr_additive
   61           | expr_order OP_LT expr_additive

   62 expr_additive: expr_multiplicative
   63              | expr_additive OP_PLUS expr_multiplicative
   64              | expr_additive OP_MINUS expr_multiplicative

   65 expr_multiplicative: expr_object_creation
   66                    | expr_multiplicative OP_MULTIPLICATION expr_object_creation
   67                    | expr_multiplicative OP_DIVITION expr_object_creation
   68                    | expr_multiplicative OP_MODULO expr_object_creation

   69 expr_object_creation: expr_pre_additive_sign_and_not
   70                     | NEW IDENTIFIER LPAR parameters RPAR

   71 expr_pre_additive_sign_and_not: expr_post_additive_or_access
   72                               | OP_PLUS_PLUS expr_post_additive_or_access
   73                               | OP_MINUS_MINUS expr_post_additive_or_access
   74                               | OP_PLUS expr_post_additive_or_access
   75                               | OP_MINUS expr_post_additive_or_access
   76                               | OP_NOT expr_post_additive_or_access

   77 expr_post_additive_or_access: expr_basic
   78                             | expr_basic OP_PLUS_PLUS
   79                             | expr_basic OP_MINUS_MINUS
   80                             | expr_post_additive_or_access method_call
   81                             | expr_post_additive_or_access property_access

   82 property_access: OP_PROP expr_basic

   83 method_call: LPAR parameters RPAR

   84 expr_basic: built_in
   85           | IDENTIFIER
   86           | LPAR expr RPAR

   87 built_in: INT
   88         | BOOLEAN
   89         | CHAR
   90         | STRING

   91 type: TYPE_INT
   92     | TYPE_BOOLEAN
   93     | TYPE_CHAR
   94     | TYPE_STRING

   95 parameters_def: /* empty */
   96               | parameter_def
   97               | parameters_def COMA parameter_def

   98 parameter_def: type IDENTIFIER

   99 parameters: /* empty */
  100           | parameter
  101           | parameters COMA parameter

  102 parameter: expr


Terminals, with rules where they appear

$end (0) 0
error (256)
INT (258) 87
BOOLEAN (259) 88
CHAR (260) 89
STRING (261) 90
IDENTIFIER (262) 5 10 12 15 18 29 30 70 85 98
TYPE_INT (263) 91
TYPE_BOOLEAN (264) 92
TYPE_CHAR (265) 93
TYPE_STRING (266) 94
IF (267) 31
ELSE (268) 32 33
FOR (269)
WHILE (270) 35 36
CONST (271)
NEW (272) 70
CLASS (273) 5
METHOD (274) 18
RETURN (275)
MAIN (276) 4
OP_PLUS (277) 63 74
OP_MINUS (278) 64 75
OP_MULTIPLICATION (279) 66
OP_DIVITION (280) 67
OP_EXP (281)
OP_MODULO (282) 68
OP_PLUS_PLUS (283) 72 78
OP_MINUS_MINUS (284) 73 79
OP_EQ (285) 55
OP_NE (286) 56
OP_GE (287) 58
OP_LE (288) 59
OP_GT (289) 60
OP_LT (290) 61
OP_AND (291) 53
OP_OR (292) 51
OP_NOT (293) 76
OP_IMPLIES (294) 49
OP_ASSIGN (295) 12 30 39
OP_PLUS_SH (296) 40
OP_MINUS_SH (297) 41
OP_MULT_SH (298) 42
OP_DIV_SH (299) 43
OP_MOD_SH (300) 44
OP_PROP (301) 82
LPAR (302) 4 15 18 31 35 36 70 83 86
RPAR (303) 4 15 18 31 35 36 70 83 86
LBRA (304)
RBRA (305)
LCUR (306) 4 5 15 18 31 32 35
RCUR (307) 4 5 15 18 31 32 35
SEMC (308) 9 21 22
COMA (309) 97 101
COND_QUES (310) 46
COND_COLN (311) 46


Nonterminals, with rules where they appear

$accept (57)
    on left: 0
program (58)
    on left: 1, on right: 0
classes (59)
    on left: 2 3, on right: 1 2
main (60)
    on left: 4, on right: 1
class (61)
    on left: 5, on right: 2
class_content (62)
    on left: 6, on right: 5
class_instance_properties (63)
    on left: 7 8, on right: 6 7
class_instance_property (64)
    on left: 9, on right: 7
var_declaration (65)
    on left: 10 11, on right: 9
var_assignment (66)
    on left: 12, on right: 11
class_constructors (67)
    on left: 13 14, on right: 6 13
class_constructor (68)
    on left: 15, on right: 13
class_instance_methods (69)
    on left: 16 17, on right: 6 16
class_instance_method (70)
    on left: 18, on right: 16
instr_set (71)
    on left: 19 20, on right: 4 15 18 19 31 32 35
instr (72)
    on left: 21 22 23 24, on right: 19 36
instr_simple (73)
    on left: 25 26, on right: 22
instr_conditional (74)
    on left: 27, on right: 23
instr_loop (75)
    on left: 28, on right: 24
instr_declaration (76)
    on left: 29 30, on right: 25
block_if (77)
    on left: 31, on right: 27 33
block_else (78)
    on left: 32 33 34, on right: 31
block_while (79)
    on left: 35 36, on right: 28
expr (80)
    on left: 37, on right: 12 26 30 86 102
expr_assignment (81)
    on left: 38 39 40 41 42 43 44, on right: 37 39 40 41 42 43 44
expr_conditional (82)
    on left: 45 46, on right: 38 39 40 41 42 43 44 46
expr_boolean (83)
    on left: 47, on right: 31 35 36 45 46
expr_implies (84)
    on left: 48 49, on right: 47 49
expr_or (85)
    on left: 50 51, on right: 48 49 51
expr_and (86)
    on left: 52 53, on right: 50 51 53
expr_equality (87)
    on left: 54 55 56, on right: 52 53 55 56
expr_order (88)
    on left: 57 58 59 60 61, on right: 54 55 56 58 59 60 61
expr_additive (89)
    on left: 62 63 64, on right: 57 58 59 60 61 63 64
expr_multiplicative (90)
    on left: 65 66 67 68, on right: 62 63 64 66 67 68
expr_object_creation (91)
    on left: 69 70, on right: 65 66 67 68
expr_pre_additive_sign_and_not (92)
    on left: 71 72 73 74 75 76, on right: 69
expr_post_additive_or_access (93)
    on left: 77 78 79 80 81, on right: 71 72 73 74 75 76 80 81
property_access (94)
    on left: 82, on right: 81
method_call (95)
    on left: 83, on right: 80
expr_basic (96)
    on left: 84 85 86, on right: 77 78 79 82
built_in (97)
    on left: 87 88 89 90, on right: 84
type (98)
    on left: 91 92 93 94, on right: 10 11 18 29 30 98
parameters_def (99)
    on left: 95 96 97, on right: 15 18 97
parameter_def (100)
    on left: 98, on right: 96 97
parameters (101)
    on left: 99 100 101, on right: 70 83 101
parameter (102)
    on left: 102, on right: 100 101


state 0

    0 $accept: . program $end

    $default  reduce using rule 3 (classes)

    program  go to state 1
    classes  go to state 2


state 1

    0 $accept: program . $end

    $end  shift, and go to state 3


state 2

    1 program: classes . main
    2 classes: classes . class

    CLASS  shift, and go to state 4
    MAIN   shift, and go to state 5

    main   go to state 6
    class  go to state 7


state 3

    0 $accept: program $end .

    $default  accept


state 4

    5 class: CLASS . IDENTIFIER LCUR class_content RCUR

    IDENTIFIER  shift, and go to state 8


state 5

    4 main: MAIN . LPAR RPAR LCUR instr_set RCUR

    LPAR  shift, and go to state 9


state 6

    1 program: classes main .

    $default  reduce using rule 1 (program)


state 7

    2 classes: classes class .

    $default  reduce using rule 2 (classes)


state 8

    5 class: CLASS IDENTIFIER . LCUR class_content RCUR

    LCUR  shift, and go to state 10


state 9

    4 main: MAIN LPAR . RPAR LCUR instr_set RCUR

    RPAR  shift, and go to state 11


state 10

    5 class: CLASS IDENTIFIER LCUR . class_content RCUR

    $default  reduce using rule 8 (class_instance_properties)

    class_content              go to state 12
    class_instance_properties  go to state 13


state 11

    4 main: MAIN LPAR RPAR . LCUR instr_set RCUR

    LCUR  shift, and go to state 14


state 12

    5 class: CLASS IDENTIFIER LCUR class_content . RCUR

    RCUR  shift, and go to state 15


state 13

    6 class_content: class_instance_properties . class_constructors class_instance_methods
    7 class_instance_properties: class_instance_properties . class_instance_property

    TYPE_INT      shift, and go to state 16
    TYPE_BOOLEAN  shift, and go to state 17
    TYPE_CHAR     shift, and go to state 18
    TYPE_STRING   shift, and go to state 19

    $default  reduce using rule 14 (class_constructors)

    class_instance_property  go to state 20
    var_declaration          go to state 21
    class_constructors       go to state 22
    type                     go to state 23


state 14

    4 main: MAIN LPAR RPAR LCUR . instr_set RCUR

    $default  reduce using rule 20 (instr_set)

    instr_set  go to state 24


state 15

    5 class: CLASS IDENTIFIER LCUR class_content RCUR .

    $default  reduce using rule 5 (class)


state 16

   91 type: TYPE_INT .

    $default  reduce using rule 91 (type)


state 17

   92 type: TYPE_BOOLEAN .

    $default  reduce using rule 92 (type)


state 18

   93 type: TYPE_CHAR .

    $default  reduce using rule 93 (type)


state 19

   94 type: TYPE_STRING .

    $default  reduce using rule 94 (type)


state 20

    7 class_instance_properties: class_instance_properties class_instance_property .

    $default  reduce using rule 7 (class_instance_properties)


state 21

    9 class_instance_property: var_declaration . SEMC

    SEMC  shift, and go to state 25


state 22

    6 class_content: class_instance_properties class_constructors . class_instance_methods
   13 class_constructors: class_constructors . class_constructor

    IDENTIFIER  shift, and go to state 26

    $default  reduce using rule 17 (class_instance_methods)

    class_constructor       go to state 27
    class_instance_methods  go to state 28


state 23

   10 var_declaration: type . IDENTIFIER
   11                | type . var_assignment

    IDENTIFIER  shift, and go to state 29

    var_assignment  go to state 30


state 24

    4 main: MAIN LPAR RPAR LCUR instr_set . RCUR
   19 instr_set: instr_set . instr

    INT             shift, and go to state 31
    BOOLEAN         shift, and go to state 32
    CHAR            shift, and go to state 33
    STRING          shift, and go to state 34
    IDENTIFIER      shift, and go to state 35
    TYPE_INT        shift, and go to state 16
    TYPE_BOOLEAN    shift, and go to state 17
    TYPE_CHAR       shift, and go to state 18
    TYPE_STRING     shift, and go to state 19
    IF              shift, and go to state 36
    WHILE           shift, and go to state 37
    NEW             shift, and go to state 38
    OP_PLUS         shift, and go to state 39
    OP_MINUS        shift, and go to state 40
    OP_PLUS_PLUS    shift, and go to state 41
    OP_MINUS_MINUS  shift, and go to state 42
    OP_NOT          shift, and go to state 43
    LPAR            shift, and go to state 44
    RCUR            shift, and go to state 45
    SEMC            shift, and go to state 46

    instr                           go to state 47
    instr_simple                    go to state 48
    instr_conditional               go to state 49
    instr_loop                      go to state 50
    instr_declaration               go to state 51
    block_if                        go to state 52
    block_while                     go to state 53
    expr                            go to state 54
    expr_assignment                 go to state 55
    expr_conditional                go to state 56
    expr_boolean                    go to state 57
    expr_implies                    go to state 58
    expr_or                         go to state 59
    expr_and                        go to state 60
    expr_equality                   go to state 61
    expr_order                      go to state 62
    expr_additive                   go to state 63
    expr_multiplicative             go to state 64
    expr_object_creation            go to state 65
    expr_pre_additive_sign_and_not  go to state 66
    expr_post_additive_or_access    go to state 67
    expr_basic                      go to state 68
    built_in                        go to state 69
    type                            go to state 70


state 25

    9 class_instance_property: var_declaration SEMC .

    $default  reduce using rule 9 (class_instance_property)


state 26

   15 class_constructor: IDENTIFIER . LPAR parameters_def RPAR LCUR instr_set RCUR

    LPAR  shift, and go to state 71


state 27

   13 class_constructors: class_constructors class_constructor .

    $default  reduce using rule 13 (class_constructors)


state 28

    6 class_content: class_instance_properties class_constructors class_instance_methods .
   16 class_instance_methods: class_instance_methods . class_instance_method

    METHOD  shift, and go to state 72

    $default  reduce using rule 6 (class_content)

    class_instance_method  go to state 73


state 29

   10 var_declaration: type IDENTIFIER .
   12 var_assignment: IDENTIFIER . OP_ASSIGN expr

    OP_ASSIGN  shift, and go to state 74

    $default  reduce using rule 10 (var_declaration)


state 30

   11 var_declaration: type var_assignment .

    $default  reduce using rule 11 (var_declaration)


state 31

   87 built_in: INT .

    $default  reduce using rule 87 (built_in)


state 32

   88 built_in: BOOLEAN .

    $default  reduce using rule 88 (built_in)


state 33

   89 built_in: CHAR .

    $default  reduce using rule 89 (built_in)


state 34

   90 built_in: STRING .

    $default  reduce using rule 90 (built_in)


state 35

   85 expr_basic: IDENTIFIER .

    $default  reduce using rule 85 (expr_basic)


state 36

   31 block_if: IF . LPAR expr_boolean RPAR LCUR instr_set RCUR block_else

    LPAR  shift, and go to state 75


state 37

   35 block_while: WHILE . LPAR expr_boolean RPAR LCUR instr_set RCUR
   36            | WHILE . LPAR expr_boolean RPAR instr

    LPAR  shift, and go to state 76


state 38

   70 expr_object_creation: NEW . IDENTIFIER LPAR parameters RPAR

    IDENTIFIER  shift, and go to state 77


state 39

   74 expr_pre_additive_sign_and_not: OP_PLUS . expr_post_additive_or_access

    INT         shift, and go to state 31
    BOOLEAN     shift, and go to state 32
    CHAR        shift, and go to state 33
    STRING      shift, and go to state 34
    IDENTIFIER  shift, and go to state 35
    LPAR        shift, and go to state 44

    expr_post_additive_or_access  go to state 78
    expr_basic                    go to state 68
    built_in                      go to state 69


state 40

   75 expr_pre_additive_sign_and_not: OP_MINUS . expr_post_additive_or_access

    INT         shift, and go to state 31
    BOOLEAN     shift, and go to state 32
    CHAR        shift, and go to state 33
    STRING      shift, and go to state 34
    IDENTIFIER  shift, and go to state 35
    LPAR        shift, and go to state 44

    expr_post_additive_or_access  go to state 79
    expr_basic                    go to state 68
    built_in                      go to state 69


state 41

   72 expr_pre_additive_sign_and_not: OP_PLUS_PLUS . expr_post_additive_or_access

    INT         shift, and go to state 31
    BOOLEAN     shift, and go to state 32
    CHAR        shift, and go to state 33
    STRING      shift, and go to state 34
    IDENTIFIER  shift, and go to state 35
    LPAR        shift, and go to state 44

    expr_post_additive_or_access  go to state 80
    expr_basic                    go to state 68
    built_in                      go to state 69


state 42

   73 expr_pre_additive_sign_and_not: OP_MINUS_MINUS . expr_post_additive_or_access

    INT         shift, and go to state 31
    BOOLEAN     shift, and go to state 32
    CHAR        shift, and go to state 33
    STRING      shift, and go to state 34
    IDENTIFIER  shift, and go to state 35
    LPAR        shift, and go to state 44

    expr_post_additive_or_access  go to state 81
    expr_basic                    go to state 68
    built_in                      go to state 69


state 43

   76 expr_pre_additive_sign_and_not: OP_NOT . expr_post_additive_or_access

    INT         shift, and go to state 31
    BOOLEAN     shift, and go to state 32
    CHAR        shift, and go to state 33
    STRING      shift, and go to state 34
    IDENTIFIER  shift, and go to state 35
    LPAR        shift, and go to state 44

    expr_post_additive_or_access  go to state 82
    expr_basic                    go to state 68
    built_in                      go to state 69


state 44

   86 expr_basic: LPAR . expr RPAR

    INT             shift, and go to state 31
    BOOLEAN         shift, and go to state 32
    CHAR            shift, and go to state 33
    STRING          shift, and go to state 34
    IDENTIFIER      shift, and go to state 35
    NEW             shift, and go to state 38
    OP_PLUS         shift, and go to state 39
    OP_MINUS        shift, and go to state 40
    OP_PLUS_PLUS    shift, and go to state 41
    OP_MINUS_MINUS  shift, and go to state 42
    OP_NOT          shift, and go to state 43
    LPAR            shift, and go to state 44

    expr                            go to state 83
    expr_assignment                 go to state 55
    expr_conditional                go to state 56
    expr_boolean                    go to state 57
    expr_implies                    go to state 58
    expr_or                         go to state 59
    expr_and                        go to state 60
    expr_equality                   go to state 61
    expr_order                      go to state 62
    expr_additive                   go to state 63
    expr_multiplicative             go to state 64
    expr_object_creation            go to state 65
    expr_pre_additive_sign_and_not  go to state 66
    expr_post_additive_or_access    go to state 67
    expr_basic                      go to state 68
    built_in                        go to state 69


state 45

    4 main: MAIN LPAR RPAR LCUR instr_set RCUR .

    $default  reduce using rule 4 (main)


state 46

   21 instr: SEMC .

    $default  reduce using rule 21 (instr)


state 47

   19 instr_set: instr_set instr .

    $default  reduce using rule 19 (instr_set)


state 48

   22 instr: instr_simple . SEMC

    SEMC  shift, and go to state 84


state 49

   23 instr: instr_conditional .

    $default  reduce using rule 23 (instr)


state 50

   24 instr: instr_loop .

    $default  reduce using rule 24 (instr)


state 51

   25 instr_simple: instr_declaration .

    $default  reduce using rule 25 (instr_simple)


state 52

   27 instr_conditional: block_if .

    $default  reduce using rule 27 (instr_conditional)


state 53

   28 instr_loop: block_while .

    $default  reduce using rule 28 (instr_loop)


state 54

   26 instr_simple: expr .

    $default  reduce using rule 26 (instr_simple)


state 55

   37 expr: expr_assignment .

    $default  reduce using rule 37 (expr)


state 56

   38 expr_assignment: expr_conditional .
   39                | expr_conditional . OP_ASSIGN expr_assignment
   40                | expr_conditional . OP_PLUS_SH expr_assignment
   41                | expr_conditional . OP_MINUS_SH expr_assignment
   42                | expr_conditional . OP_MULT_SH expr_assignment
   43                | expr_conditional . OP_DIV_SH expr_assignment
   44                | expr_conditional . OP_MOD_SH expr_assignment

    OP_ASSIGN    shift, and go to state 85
    OP_PLUS_SH   shift, and go to state 86
    OP_MINUS_SH  shift, and go to state 87
    OP_MULT_SH   shift, and go to state 88
    OP_DIV_SH    shift, and go to state 89
    OP_MOD_SH    shift, and go to state 90

    $default  reduce using rule 38 (expr_assignment)


state 57

   45 expr_conditional: expr_boolean .
   46                 | expr_boolean . COND_QUES expr_conditional COND_COLN expr_conditional

    COND_QUES  shift, and go to state 91

    $default  reduce using rule 45 (expr_conditional)


state 58

   47 expr_boolean: expr_implies .
   49 expr_implies: expr_implies . OP_IMPLIES expr_or

    OP_IMPLIES  shift, and go to state 92

    $default  reduce using rule 47 (expr_boolean)


state 59

   48 expr_implies: expr_or .
   51 expr_or: expr_or . OP_OR expr_and

    OP_OR  shift, and go to state 93

    $default  reduce using rule 48 (expr_implies)


state 60

   50 expr_or: expr_and .
   53 expr_and: expr_and . OP_AND expr_equality

    OP_AND  shift, and go to state 94

    $default  reduce using rule 50 (expr_or)


state 61

   52 expr_and: expr_equality .
   55 expr_equality: expr_equality . OP_EQ expr_order
   56              | expr_equality . OP_NE expr_order

    OP_EQ  shift, and go to state 95
    OP_NE  shift, and go to state 96

    $default  reduce using rule 52 (expr_and)


state 62

   54 expr_equality: expr_order .
   58 expr_order: expr_order . OP_GE expr_additive
   59           | expr_order . OP_LE expr_additive
   60           | expr_order . OP_GT expr_additive
   61           | expr_order . OP_LT expr_additive
